more QA, make sure all contributors are visible when scrolling, and that localStorage is cleared when a project is deleted

--- a/app/styles/components/tabs.styl
+++ b/app/styles/components/tabs.styl
@@ -20,7 +20,8 @@
     opacity 0
     overflow hidden
     width 100%
-    height 100%
+    min-height 100%
+    height auto
     font-size 17px
     line-height 25px
     padding 25px
